# internal/user/model.go
@@ -1,19 +1,0 @@
-package user
-
-import "time"
-
-type User struct {
-	ID        string    `db:"id" json:"id"`
-	Name      string    `db:"name" json:"name"`
-	Email     string    `db:"email" json:"email"`
-	Version   int64     `db:"version" json:"version"`
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
-	UpdatedAt time.Time `db:"updated_at" json:"updated_at"`
-}
-
-type Page struct {
-	Users    []User `json:"users"`
-	Total    int64  `json:"total"`
-	Page     int    `json:"page"`
-	PageSize int    `json:"page_size"`
-}
